# dminer

./: .gitignore  Cargo.toml  README.md  config.toml.sample  dminer-dump-with-messages-added.sql  dminer_data_localhost-2021_07_08_08_45_44-dump.sql  hate.json  latest-dump.sql
database_dumps/: old-2.sql  old-dump.sql  remove_unique_constraint.sql  upgrade-make-message-id-unique-add-updated-messages-table.sql
src/: activity_db.rs  activity_kind.rs  config.rs  connection_pool.rs  custom_event_handlers.rs  database_manager.rs  handler.rs  help.rs  main.rs  message_db.rs  message_processing.rs  messages_db.rs  user.rs  user_db.rs
src/commands/: hate.rs  math.rs  meta.rs  mod.rs  music.rs  queue.rs
src/commands/music/: clear.rs  handlers.rs  info.rs  join.rs  leave.rs  mod.rs  next.rs  pause.rs  play.rs  play_insert.rs  queue.rs  remove.rs  resume.rs  shuffle.rs  skip.rs  util.rs  youtube_search.rs
