[package]
name = "ledermann"
version = "0.4.1"
edition = "2018"
authors = ["flamion <flamion@protonmail.com>", "zUnixorn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5.5", features = [ "runtime-tokio-native-tls", "postgres", "chrono", "macros", "sqlx-macros" ] }
tokio = { version = "1.8.1", features = ["full"] }
toml = "0.5.8"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
fasteval = "0.2.4"
songbird = "0.1.1"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "framework", "standard_framework"]
version = "0.10"