[package]
name = "ledermann"
version = "0.6.0"
edition = "2018"
authors = ["flamion <flamion@protonmail.com>", "zUnixorn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
toml = "0.5.8"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4"
chrono = "0.4.19"
log = "0.4.14"
simple_logger = "1.11.0"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "framework", "standard_framework", "voice"]
version = "0.10"

[dependencies.songbird]
version = "0.1.1"
features = ["builtin-queue"]
optional = true

[dependencies.lavalink-rs]
version = "0.8.0"
features = ["rustls", "serenity", "andesite"]
optional = true

#[dependencies.lavalink-rs]
#git = "https://gitlab.com/vicky5124/lavalink-rs.git"
#branch = "master"
#features = ["rustls", "serenity", "andesite"]
#optional = true

[dependencies.fasteval]
version = "0.2.4"
optional = true

[features]
default = []
all = ["music", "math"]
music = ["songbird", "lavalink-rs"]
math = ["fasteval"]
